# mcp_maker

./: .dockerignore  .env.template  .gitignore  CLAUDE.md  Makefile  podman-compose.yml  pyproject.toml
.gitea/workflows/: ci.yml
backend/: Containerfile  alembic.ini
backend/app/: config.py  db.py  main.py
backend/app/api/: assist.py  deps.py  health.py  livez.py  models.py  test_session.py  versions.py
backend/app/auth/: oidc.py
backend/app/clients/: anthropic_client.py
backend/app/mcp/: gateway.py
backend/app/models/: __init__.py  instance.py  model.py  scenario.py
backend/app/schemas/: assist.py  models.py
backend/app/tools/: crud.py  scenario.py  schema_only.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_scenarios_table.py
backend/tests/: conftest.py  test_api_lifecycle.py  test_assist.py  test_auth.py  test_health.py  test_mcp_crud.py  test_mcp_gateway.py  test_mcp_scenario.py
deploy/argocd/: forge-app.yaml
deploy/docs/: secrets.md
deploy/helm/forge/: Chart.yaml  values.yaml
deploy/helm/forge/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  route.yaml  secret.yaml  service.yaml  serviceaccount.yaml
deploy/kustomize/base/: deployment.yaml  kustomization.yaml  service.yaml  serviceaccount.yaml
deploy/kustomize/overlays/openshift/: kustomization.yaml  route.yaml
deploy/kustomize/overlays/prod/: ingress.yaml  kustomization.yaml
docs/: airgap-deployment.md  architecture.md  mcp-notes.md
docs/decisions/: ADR-001-tech-stack.md  ADR-002-mcp-gateway-dispatch.md  ADR-003-scenario-engine.md  ADR-004-model-versioning.md  ADR-005-auth.md  ADR-006-deploy.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: lifecycle.spec.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AssistPanel.tsx  ChatPanel.tsx  ConnectionSnippet.tsx  FieldBuilder.tsx  JsonSchemaEditor.tsx  StatusBadge.tsx
frontend/src/pages/: ModelEdit.tsx  ModelList.tsx
