[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge-backend"
version = "0.1.0"
description = "FORGE — Schema → MCP Authoring Platform (backend)"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.3",
    "gunicorn==23.0.0",
    # MCP SDK — pinned hard; see docs/mcp-notes.md
    "mcp==1.26.0",
    # DB
    "sqlalchemy[asyncio]==2.0.41",
    "asyncpg==0.30.0",
    "alembic==1.16.1",
    # Validation
    "pydantic==2.11.5",
    "pydantic-settings==2.9.1",
    "jsonschema==4.23.0",
    # Anthropic
    "anthropic==0.52.0",
    # Auth
    "python-jose[cryptography]==3.5.0",
    "httpx==0.28.1",
    # Utilities
    "structlog==25.3.0",
    "python-multipart==0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "pytest-cov==6.1.0",
    "anyio==4.9.0",
    "httpx==0.28.1",
    "testcontainers[postgres]==4.9.2",
    "ruff==0.11.13",
    "mypy==1.16.0",
    "types-jsonschema==4.23.0.20250516",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# ClientSession(read, write) depends on read/write from outer streamable_http_client CM —
# cannot safely combine into single with statement as SIM117 suggests
"backend/tests/test_mcp_gateway.py" = ["SIM117"]
"backend/tests/test_mcp_crud.py" = ["SIM117"]
"backend/tests/test_mcp_scenario.py" = ["SIM117"]
"backend/tests/test_api_lifecycle.py" = ["SIM117"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
# Tests must use the session event loop so session-scoped fixtures (like
# live_server which holds session_manager.run()'s anyio task group) are
# accessible without cross-loop task spawning.
asyncio_default_test_loop_scope = "session"
testpaths = ["backend/tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]
